# nav2-amr

./: .gitignore  README.md  frames_2026-04-01_15.40.02.gv
assets/maps/: world1_map.yaml  world2_map.pgm
assets/worlds/: world1.sdf  world2.sdf  worldorigin.txt
assets/worlds/old_worlds/: world3Old.sdf
docs/: Plan.txt
ros2_ws/: dataset_A.csv  dataset_A_trial.csv  frames_2026-03-26_14.00.54.gv  frames_2026-04-01_01.06.00.gv  frames_2026-04-01_17.12.44.gv
ros2_ws/src/eta_predictor/: package.xml  setup.cfg  setup.py
ros2_ws/src/eta_predictor/eta_predictor/: eta_comparison_node.py  eta_predictor_node.py
ros2_ws/src/experiments/: package.xml  setup.py
ros2_ws/src/helper_nodes/: CMakeLists.txt  package.xml
ros2_ws/src/maps/: CMakeLists.txt  package.xml
ros2_ws/src/maps/Older Iters/: world3_map.pgm  world3_map.yaml
ros2_ws/src/maps/world1/: map.pgm  map.yaml
ros2_ws/src/maps/world2/: map.yaml
ros2_ws/src/maps/world3/: map.yaml
ros2_ws/src/nav2_config/: CMakeLists.txt  package.xml
ros2_ws/src/nav2_config/controllers/: dwb_params.yaml  mppi_params.yaml  rpp_params.yaml
ros2_ws/src/nav2_config/costmaps/: costmap_params.yaml
ros2_ws/src/nav2_config/planners/: navfn_params.yaml  theta_star_params.yaml
ros2_ws/src/nav_logger/: package.xml  setup.cfg  setup.py
ros2_ws/src/nav_logger/nav_logger/: nav_logger_node.py
ros2_ws/src/robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/testing/: CMakeLists.txt  package.xml
ros2_ws/src/worlds/: CMakeLists.txt  package.xml
(+43 files in other folders)
